--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Курс JavaScript</h1>
-    <a href="1.html">Начать</a>
+    <p>
+        <a href="1.html">Начать</a>
+    </p>
     <hr>
     <h2>Содержание</h2>
     <ol>
@@ -33,8 +35,8 @@
         <li><a href="19.html">Аргументы обработчиков событий. Отмена событий</a></li>
         <li><a href="20.html">Фазы распространения событий</a></li>
         <li><a href="21.html">События мыши</a></li>
-        <li><a href="21.html">События клавиатуры и элементов форм</a></li>
-        <li><a href="21.html">Работа с Ajax</a></li>
+        <li><a href="22.html">События клавиатуры и элементов форм</a></li>
+        <li><a href="23.html">Работа с Ajax</a></li>
     </ol>
 </body>
 </html>
