--- a/2.html
+++ b/2.html
@@ -14,5 +14,96 @@
         <a href="3.html">Следующий урок &#8594;</a>
     </p>
     <hr>
+
+    <h2>Типы данных</h2>
+    <ul>
+        <li>
+            <h3>Числа</h3>
+            <p>
+                Все числа в JavaScript определяются специальным страндартом <b>IEEE 754</b>
+                Данный формат представляет цифры в диапазоне от <b>+-1.8*10<sup>308</sup></b>
+                до <b>+-5*10<sup>324</sup></b>.
+                То есть весь диапазон целых чисел от <b>-2<sup>53</sup></b> до <b>2<sup>53</sup></b>.
+                Все что выходит за рамки диапазона, может терять точность в младших форматах.
+            </p>
+        </li>
+
+        <li>
+            <h3>Строки</h3>
+            <p>
+                Строки в JavaScript имеют формат: 'строка' либо "строка"
+            </p>
+            <h4>Управляющие последовательности</h4>
+            <table border="1">
+                <tr>
+                    <td>Последовательность</td>
+                    <td>Представляемый символ</td>
+                </tr>
+                <tr>
+                    <td>\0</td>
+                    <td>Символ NULL (\u0000)</td>
+                </tr>
+                <tr>
+                    <td>\b</td>
+                    <td>Забой (\u0008)</td>
+                </tr>
+                <tr>
+                    <td>\t</td>
+                    <td>(\u0009)</td>
+                </tr>
+                <tr>
+                    <td>\n</td>
+                    <td>(\u000A)</td>
+                </tr>
+                <tr>
+                    <td>\v</td>
+                    <td>(\u000B)</td>
+                </tr>
+                <tr>
+                    <td>\f</td>
+                    <td>(\u000C)</td>
+                </tr>
+                <tr>
+                    <td>\r</td>
+                    <td>(\u000D)</td>
+                </tr>
+                <tr>
+                    <td>\"</td>
+                    <td>(\u0022)</td>
+                </tr>
+                <tr>
+                    <td>\'</td>
+                    <td>(\u0027)</td>
+                </tr>
+                <tr>
+                    <td>\\</td>
+                    <td>(\u005C)</td>
+                </tr>
+                <tr>
+                    <td>\xXX</td>
+                    <td>Символ Latin-1, заданный двумя шестнадцатиричными цифрами XX</td>
+                </tr>
+                <tr>
+                    <td>\uxXXXX</td>
+                    <td>Символ Unicode, заданный черырьмя шестнадцатиричными цифрами XXXX</td>
+                </tr>
+            </table>
+        </li>
+        <li>
+            <h3>Логический тип данных</h3>
+            <p>
+                <b>true и false</b><br>
+                Оператор идентичности <b>===</b> проверяет два операнда на идентичность, руководствуясь строгим определением совпадения, и не допускает приведения типов.<br>
+                Оператор сравнения <b>==</b> сравнивает два операнда на совпадение и допускает приведение типов.<br>
+                Так же существуют операторы неидентичности <b>!=</b> и неравенства <b>!==</b>.<br>
+                Логическое И <b>&&</b><br>
+                Логическое ИЛИ <b>||</b><br>
+                Инкрементирующий оператор ++<br>
+                Декрементирующий оператор --
+            </p>
+        </li>
+    </ul>
+
+    <script src="js/2.js"></script>
 </body>
 </html>
