--- a/3.html
+++ b/3.html
@@ -17,7 +17,7 @@
     <hr>
 
     <section class="lesson__content">
-        
+        <div id="table"></div>
     </section>
 
     <script src="js/3.js"></script>
