--- a/4.html
+++ b/4.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Урок №3</title>
+    <title>Урок №4</title>
 </head>
 <body class="lesson">
-    <h1 class="lesson__title">03. Условные инструкции в&nbsp;JavaScript</h1>
+    <h1 class="lesson__title">04. JavaScript функции</h1>
     <p class="lesson__navlinks">
         <a class="lesson__link lesson__link--home" href="index.html">&#8629; К оглавлению</a>
-        <a class="lesson__link lesson__link--back" href="2.html">&#8592; Предыдущий урок</a> | 
-        <a class="lesson__link lesson__link--forward" href="4.html">Следующий урок &#8594;</a>
+        <a class="lesson__link lesson__link--back" href="3.html">&#8592; Предыдущий урок</a> | 
+        <a class="lesson__link lesson__link--forward" href="5.html">Следующий урок &#8594;</a>
     </p>
     <hr>
 
     <section class="lesson__content">
-        <div id="table"></div>
+
     </section>
 
-    <script src="js/3.js"></script>
+    <script src="js/4.js"></script>
 </body>
 </html>
