--- a/4.html
+++ b/4.html
@@ -17,7 +17,13 @@
     <hr>
 
     <section class="lesson__content">
-
+        <b>Функция</b> - это блок програмного кода, который определяется один единственный раз и может выполняться многократно.
+        <p>function имяФункции(параметры) {<br>
+        ⠀⠀⠀⠀Код фунции<br>
+        }<br>
+        <br>
+        имяФункции(параметры);
+        </p>
     </section>
 
     <script src="js/4.js"></script>
