--- a/5.html
+++ b/5.html
@@ -17,13 +17,11 @@
     <hr>
 
     <section class="lesson__content">
-        <b>Функция</b> - это блок програмного кода, который определяется один единственный раз и может выполняться многократно.
-        <p>function имяФункции(параметры) {<br>
-        ⠀⠀⠀⠀Код фунции<br>
-        }<br>
-        <br>
-        имяФункции(параметры);
-        </p>
+        <b>Массив</b> - это упорядоченная коллекция значений.<br>
+        Значения в массиве называются его элементами,и каждый элемент характеризуется числовой позицией (индексом).<br>
+        Индексы, которые представляют собой числа, называют ключами массива.<br>
+        Эллементы массива могут иметь абсолютно любой тип, а так же быть объектами и другими массивами.<br>
+        Индексация в массиве начинается с нуля.
     </section>
 
     <script src="js/5.js"></script>
