add styles to first lessons

--- a/1.html
+++ b/1.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Урок №1</title>
 </head>
 
-<body>
-    <h1>01. Введение в язык JavaScript. Синтаксис. Переменные</h1>
-    <a href="index.html">&#8629; К оглавлению</a>
-    <p>
-        <a href="2.html">Следующий урок &#8594;</a>
+<body class="lesson">
+    <h1 class="lesson__title">01. Введение в язык JavaScript. Синтаксис. Переменные</h1>
+    <p class="lesson__navlinks">
+        <a class="lesson__link lesson__link--home" href="index.html">&#8629; К оглавлению</a>
+        <a class="lesson__link lesson__link--forward" href="2.html">Следующий урок &#8594;</a>
     </p>
     <hr>
 
-    <div class="content">
+    <section class="lesson__content content">
         <div class="content__wrapper">
             <h2>JavaScript</h2>
             <button onClick="alert('Third JS connection type')">Third type JS connection</button><br>
