--- a/6.html
+++ b/6.html
@@ -17,11 +17,29 @@
     <hr>
 
     <section class="lesson__content">
-        <b>Массив</b> - это упорядоченная коллекция значений.<br>
-        Значения в массиве называются его элементами,и каждый элемент характеризуется числовой позицией (индексом).<br>
-        Индексы, которые представляют собой числа, называют ключами массива.<br>
-        Эллементы массива могут иметь абсолютно любой тип, а так же быть объектами и другими массивами.<br>
-        Индексация в массиве начинается с нуля.
+        <b>Методы:</b>
+        <ul class="content__list">
+            <li class="content__item">join</li>
+            <li class="content__item">reverse</li>
+            <li class="content__item">sort</li>
+            <li class="content__item">concat</li>
+            <li class="content__item">slice</li>
+            <li class="content__item">splice</li>
+            <li class="content__item">push</li>
+            <li class="content__item">pop</li>
+            <li class="content__item">unshift</li>
+            <li class="content__item">delete</li>
+            <li class="content__item">forEach</li>
+            <li class="content__item">map</li>
+            <li class="content__item">filter</li>
+            <li class="content__item">every</li>
+            <li class="content__item">some</li>
+            <li class="content__item">reduce</li>
+            <li class="content__item">reduceRight</li>
+            <li class="content__item">indexOf</li>
+            <li class="content__item">lastIndexOf</li>
+            <li class="content__item">for(let key in arr)</li>
+        </ul>
     </section>
 
     <script src="js/6.js"></script>
