--- a/2.html
+++ b/2.html
@@ -36,60 +36,62 @@
                     Строки в JavaScript имеют формат: 'строка' либо "строка"
                 </p>
                 <h4>Управляющие последовательности</h4>
-                <table border="1">
-                    <tr>
-                        <td>Последовательность</td>
-                        <td>Представляемый символ</td>
-                    </tr>
-                    <tr>
-                        <td>\0</td>
-                        <td>Символ NULL (\u0000)</td>
-                    </tr>
-                    <tr>
-                        <td>\b</td>
-                        <td>Забой (\u0008)</td>
-                    </tr>
-                    <tr>
-                        <td>\t</td>
-                        <td>(\u0009)</td>
-                    </tr>
-                    <tr>
-                        <td>\n</td>
-                        <td>(\u000A)</td>
-                    </tr>
-                    <tr>
-                        <td>\v</td>
-                        <td>(\u000B)</td>
-                    </tr>
-                    <tr>
-                        <td>\f</td>
-                        <td>(\u000C)</td>
-                    </tr>
-                    <tr>
-                        <td>\r</td>
-                        <td>(\u000D)</td>
-                    </tr>
-                    <tr>
-                        <td>\"</td>
-                        <td>(\u0022)</td>
-                    </tr>
-                    <tr>
-                        <td>\'</td>
-                        <td>(\u0027)</td>
-                    </tr>
-                    <tr>
-                        <td>\\</td>
-                        <td>(\u005C)</td>
-                    </tr>
-                    <tr>
-                        <td>\xXX</td>
-                        <td>Символ Latin-1, заданный двумя шестнадцатиричными цифрами XX</td>
-                    </tr>
-                    <tr>
-                        <td>\uxXXXX</td>
-                        <td>Символ Unicode, заданный черырьмя шестнадцатиричными цифрами XXXX</td>
-                    </tr>
-                </table>
+                <div class="lesson__table-wrapper">
+                    <table class="lesson__table" border="1">
+                        <tr>
+                            <td>Последовательность</td>
+                            <td>Представляемый символ</td>
+                        </tr>
+                        <tr>
+                            <td>\0</td>
+                            <td>Символ NULL (\u0000)</td>
+                        </tr>
+                        <tr>
+                            <td>\b</td>
+                            <td>Забой (\u0008)</td>
+                        </tr>
+                        <tr>
+                            <td>\t</td>
+                            <td>(\u0009)</td>
+                        </tr>
+                        <tr>
+                            <td>\n</td>
+                            <td>(\u000A)</td>
+                        </tr>
+                        <tr>
+                            <td>\v</td>
+                            <td>(\u000B)</td>
+                        </tr>
+                        <tr>
+                            <td>\f</td>
+                            <td>(\u000C)</td>
+                        </tr>
+                        <tr>
+                            <td>\r</td>
+                            <td>(\u000D)</td>
+                        </tr>
+                        <tr>
+                            <td>\"</td>
+                            <td>(\u0022)</td>
+                        </tr>
+                        <tr>
+                            <td>\'</td>
+                            <td>(\u0027)</td>
+                        </tr>
+                        <tr>
+                            <td>\\</td>
+                            <td>(\u005C)</td>
+                        </tr>
+                        <tr>
+                            <td>\xXX</td>
+                            <td>Символ Latin-1, заданный двумя шестнадцатиричными цифрами XX</td>
+                        </tr>
+                        <tr>
+                            <td>\uxXXXX</td>
+                            <td>Символ Unicode, заданный черырьмя шестнадцатиричными цифрами XXXX</td>
+                        </tr>
+                    </table>
+                </div>
             </li>
             <li>
                 <h3>Логический тип данных</h3>
