--- a/3.html
+++ b/3.html
@@ -17,7 +17,9 @@
     <hr>
 
     <section class="lesson__content">
-        <div id="table"></div>
+        <div>
+            <div id="table"></div>
+        </div>
     </section>
 
     <script src="js/3.js"></script>
