--- a/7.html
+++ b/7.html
@@ -17,31 +17,20 @@
     <hr>
 
     <section class="lesson__content">
-        <b>Методы:</b>
-        <ul class="content__list">
-            <li class="content__item">join</li>
-            <li class="content__item">reverse</li>
-            <li class="content__item">sort</li>
-            <li class="content__item">concat</li>
-            <li class="content__item">slice</li>
-            <li class="content__item">splice</li>
-            <li class="content__item">push</li>
-            <li class="content__item">pop</li>
-            <li class="content__item">unshift</li>
-            <li class="content__item">delete</li>
-            <li class="content__item">forEach</li>
-            <li class="content__item">map</li>
-            <li class="content__item">filter</li>
-            <li class="content__item">every</li>
-            <li class="content__item">some</li>
-            <li class="content__item">reduce</li>
-            <li class="content__item">reduceRight</li>
-            <li class="content__item">indexOf</li>
-            <li class="content__item">lastIndexOf</li>
-            <li class="content__item">for(let key in arr)</li>
-        </ul>
+        <p>
+            За работу с датой и временем отвечает специальный объект
+            <em>Date</em>,
+            получить доступ к которому можно с помощью ключевого слова <em>new</em>.<br>
+            <b>new Date();</b><br>
+            Этот объект можно создать напрямую без специального слова <em>new</em>,
+            напрямую обращаясь к <em>Date</em><br>
+
+            <b>let date = new Date();</b> равнозначно с <b>let date = Date();</b>
+
+        </p>
+
     </section>
 
-    <script src="js/6.js"></script>
+    <script src="js/7.js"></script>
 </body>
 </html>
